# yasvt-python

./: .gitignore  .replit  README.md  pyproject.toml  temp.py
examples/: chinese.csv  russian.csv
src/: database.py  main.py  menu.py  speech.py  test.py  vocabularyextractor.py  word.py  wordlist.py
src/utils/: babelnet_conf.yml-template  extractor.py  translator.py
src/yasvt/: cli.py  database.py  extractor.py  helpers.py  main.py  test.py  translator.py  word.py  wordlist.py
